force-app/main/default/objects/OW_email_update_setting__mdt/fields/OW_email_type__c.field-meta.xml
<CustomField>
    <fullName>OW_email_type__c</fullName>
    <description>The type of email that this setting corresponds to.</description>
    <label>Email type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOA</fullName>
                <default>true</default>
                <label>LOA</label>
            </value>
            <value>
                <fullName>Fulfilment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>