force-app/main/default/objects/OW_email_update_setting__mdt/fields/OW_record_status__c.field-meta.xml
<CustomField>
    <fullName>OW_record_status__c</fullName>
    <description>The status of the record that is being processed in the email udpate.</description>
    <label>Record status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>