force-app/main/default/objects/OW_email_update_setting__mdt/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <description>A secondary status field that controls the email display status. Eg for fulfilment update emails, this is the payment status</description>
    <label>Sub status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>