force-app/main/default/objects/OW_email_update_setting__mdt/listViews/FulfilmentUpdateSettings.listView-meta.xml
<ListView>
    <fullName>FulfilmentUpdateSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OW_action__c</columns>
    <columns>OW_record_status__c</columns>
    <columns>SubStatus__c</columns>
    <columns>OW_display_status__c</columns>
    <columns>OW_message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_email_type__c</field>
        <operation>equals</operation>
        <value>Fulfilment</value>
    </filters>
    <label>Fulfilment update</label>
    <language>en_US</language>
</ListView>